# cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  dist-workspace.toml
.github/: build-setup.yml
.github/workflows/: bootstrap-crates-publish.yml  ci.yml  installed-release-attestations.yml  publish-crates.yml  publish-homebrew-tap.yml  publish-npm-trusted.yml  release.yml
scripts/: cargo-audit-version.sh  check-all.sh  check-github-hosted-runners.py  confidentiality-check.sh  installed_release_attestation.py  pre-commit.sh  real_user_public_install_smoke.py  release-preflight.sh  test-check-all.sh  test-cross-platform-auth-store.py  test-dist-checksums-self-test.sh  test-dist-checksums.sh  test-dist-global-artifacts-self-test.sh  test-dist-global-artifacts.sh  test-dist-homebrew-formula-smoke-self-test.sh  test-dist-homebrew-formula-smoke.sh  test-dist-local-artifacts-self-test.sh  test-dist-local-artifacts.sh  test-dist-npm-package-install-smoke-self-test.sh  test-dist-npm-package-install-smoke.sh  test-dist-plan-self-test.sh  test-dist-plan.sh  test-dist-shell-installer-smoke-self-test.sh  test-dist-shell-installer-smoke.sh  test-dist-source-artifact-smoke-self-test.sh  test-dist-source-artifact-smoke.sh  test-installed-release-attestation-workflow.py  test-installed-release-attestation.py  test-package-contents.sh  test-package-install-smoke.sh  test-package-metadata-self-test.sh  test-package-metadata.sh  test-publish-crates-workflow.py  test-real-user-public-install-smoke.py  test-release-docs-self-test.sh  test-release-docs.sh  test-release-preflight.sh  test-release-workflow-contracts-self-test.sh  test-release-workflow-contracts.sh
src/: auth.rs  auth_namespace.rs  doctor.rs  error.rs  flags.rs  help.rs  ids.rs  investigate.rs  lib.rs  main.rs  native_debug_artifacts.rs  parser.rs  project_create.rs  render.rs  setup.rs  status.rs  support.rs  usage.rs  version.rs
src/auth/: login.rs  logout.rs  session.rs  store.rs
src/native_debug_artifacts/: artifact.rs  wire.rs
src/parser/: help_topics.rs  issue_shortcuts.rs  log_shortcuts.rs  support.rs  trace_reads.rs  watch.rs
tests/: action_cursor_pagination.rs  action_filter_recovery.rs  api_rendering.rs  command_shaped_help.rs  commands.rs  execution_commands.rs  flag_recovery.rs  help_errors.rs  help_text.rs  issue_cursor_pagination.rs  issue_investigation.rs  issue_mutation_shortcuts.rs  issue_recovery.rs  local_commands.rs  log_cursor_pagination.rs  login_loopback.rs  logout_sessions.rs  native_debug_artifacts.rs  parse_errors.rs  project_create.rs  project_doctor.rs  runtime_errors.rs  search_commands.rs  shortcut_commands.rs  status_commands.rs  support_context.rs  support_tickets.rs  trace_discovery.rs  usage.rs  watch_errors.rs
wix/: main.wxs
